-- Idempotent schema for wrestling-stats on Azure Database for PostgreSQL.
-- All tables carry gov_body (lowercase governing-body acronym) as a discriminator.
-- search_path is set to the target schema by the connecting code.

CREATE TABLE IF NOT EXISTS governing_bodies (
    gov_body TEXT PRIMARY KEY,
    tw_gb_id BIGINT NOT NULL,
    acronym TEXT NOT NULL,
    name TEXT NOT NULL,
    first_seen TIMESTAMP DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE IF NOT EXISTS tournaments (
    gov_body TEXT NOT NULL,
    event_id TEXT NOT NULL,
    name TEXT,
    year INTEGER,
    start_date DATE,
    end_date DATE,
    address TEXT,
    venue TEXT,
    street TEXT,
    city TEXT,
    state TEXT,
    postal_code TEXT,
    event_type_id INTEGER,
    event_type_name TEXT,
    first_seen TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (gov_body, event_id)
);

CREATE TABLE IF NOT EXISTS tournament_rounds (
    gov_body TEXT NOT NULL,
    event_id TEXT NOT NULL,
    round_id TEXT NOT NULL,
    label TEXT,
    raw_html TEXT,
    parsed_ok BOOLEAN,
    first_seen TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (gov_body, event_id, round_id)
);

CREATE TABLE IF NOT EXISTS matches (
    match_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    gov_body TEXT NOT NULL,
    event_id TEXT,
    round_id TEXT,
    weight_class TEXT,
    raw_match_results TEXT,
    round_detail TEXT,
    winner_name TEXT,
    winner_team TEXT,
    decision_type TEXT,
    loser_name TEXT,
    loser_team TEXT,
    decision_type_code TEXT,
    winner_points INTEGER,
    loser_points INTEGER,
    fall_time TEXT,
    bye BOOLEAN,
    first_seen TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    -- Elo columns populated by calculate_elo.py
    winner_elo_after DOUBLE PRECISION,
    winner_elo_adjustment DOUBLE PRECISION,
    loser_elo_after DOUBLE PRECISION,
    loser_elo_adjustment DOUBLE PRECISION,
    elo_computed_at TIMESTAMP,
    elo_sequence BIGINT,
    winner_elo_before DOUBLE PRECISION,
    loser_elo_before DOUBLE PRECISION,
    expected_winner DOUBLE PRECISION,
    expected_loser DOUBLE PRECISION,
    k_applied DOUBLE PRECISION,
    k_type_mult DOUBLE PRECISION,
    k_expected_mult DOUBLE PRECISION,
    k_mov_mult DOUBLE PRECISION,
    k_quick_mult DOUBLE PRECISION,
    margin INTEGER,
    fall_seconds INTEGER,
    round_order INTEGER,
    winner_prev_matches INTEGER,
    loser_prev_matches INTEGER
);

CREATE INDEX IF NOT EXISTS matches_gov_event_round_idx ON matches (gov_body, event_id, round_id);
CREATE INDEX IF NOT EXISTS matches_gov_elo_seq_idx ON matches (gov_body, elo_sequence);

CREATE TABLE IF NOT EXISTS wrestlers (
    gov_body TEXT NOT NULL,
    name TEXT NOT NULL,
    current_elo DOUBLE PRECISION,
    matches_played INTEGER,
    last_event_id TEXT,
    last_start_date DATE,
    last_updated TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    last_opponent_name TEXT,
    last_adjustment DOUBLE PRECISION,
    last_team TEXT,
    best_elo DOUBLE PRECISION,
    best_date DATE,
    wins INTEGER,
    wins_fall INTEGER,
    losses INTEGER,
    losses_fall INTEGER,
    dqs INTEGER,
    opponent_elo_sum DOUBLE PRECISION,
    opponent_elo_count INTEGER,
    opponent_avg_elo DOUBLE PRECISION,
    PRIMARY KEY (gov_body, name)
);

CREATE TABLE IF NOT EXISTS wrestler_history (
    match_id BIGINT NOT NULL REFERENCES matches (match_id) ON DELETE CASCADE,
    role TEXT NOT NULL, -- 'W' or 'L'
    gov_body TEXT NOT NULL,
    name TEXT,
    team TEXT,
    event_id TEXT,
    round_id TEXT,
    weight_class TEXT,
    start_date DATE,
    opponent_name TEXT,
    opponent_team TEXT,
    opponent_pre_elo DOUBLE PRECISION,
    opponent_post_elo DOUBLE PRECISION,
    pre_elo DOUBLE PRECISION,
    post_elo DOUBLE PRECISION,
    adjustment DOUBLE PRECISION,
    expected_score DOUBLE PRECISION,
    k_applied DOUBLE PRECISION,
    k_type_mult DOUBLE PRECISION,
    k_expected_mult DOUBLE PRECISION,
    k_mov_mult DOUBLE PRECISION,
    k_quick_mult DOUBLE PRECISION,
    decision_type TEXT,
    decision_type_code TEXT,
    margin INTEGER,
    fall_seconds INTEGER,
    round_detail TEXT,
    round_order INTEGER,
    bye BOOLEAN,
    elo_sequence BIGINT,
    last_updated TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
    PRIMARY KEY (match_id, role)
);

CREATE INDEX IF NOT EXISTS wrestler_history_gov_name_idx ON wrestler_history (gov_body, name);
CREATE INDEX IF NOT EXISTS wrestler_history_gov_event_idx ON wrestler_history (gov_body, event_id);
