// Database schema for wrestling-stats (Azure PostgreSQL, schema `trackwrestling`)
// Tracks tournament data scraped from TrackWrestling. Every table carries gov_body,
// the lowercase governing-body acronym, so all governing bodies share one schema.
// Authoritative DDL: db/schema.sql

Table governing_bodies {
  gov_body varchar [pk, note: 'Lowercase acronym (e.g., nvwf, va_usa)']
  tw_gb_id bigint [note: 'TrackWrestling gbId']
  acronym varchar [note: 'Display acronym']
  name varchar [note: 'Full name']
  first_seen timestamp [default: `CURRENT_TIMESTAMP`]
}

Table tournaments {
  gov_body varchar [note: 'FK to governing_bodies.gov_body']
  event_id varchar [note: 'TrackWrestling event ID']
  name varchar [note: 'Tournament name']
  year integer [note: 'Year extracted from tournament name or start_date']
  start_date date [note: 'Tournament start date']
  end_date date [note: 'Tournament end date']
  address varchar [note: 'Full address (unused)']
  venue varchar [note: 'Venue name']
  street varchar [note: 'Street address (unused)']
  city varchar [note: 'City']
  state varchar [note: 'State abbreviation']
  postal_code varchar [note: 'Postal/ZIP code (unused)']
  event_type_id integer [note: 'TrackWrestling event type ID (1-5)']
  event_type_name varchar [note: 'Human-readable event type name']
  first_seen timestamp [default: `CURRENT_TIMESTAMP`, note: 'When record was first created']
  
  indexes {
    (gov_body, event_id) [pk]
  }
  
  note: 'Tournament metadata from TrackWrestling discovery'
}

// Event type reference:
// 1 = predefinedtournaments (State/Regional tournaments)
// 2 = opentournaments (Open tournaments)
// 3 = teamtournaments (Team-based tournaments)
// 4 = freestyletournaments (Freestyle tournaments)
// 5 = seasontournaments (Season/league tournaments)

Table tournament_rounds {
  gov_body varchar
  event_id varchar [note: 'FK to tournaments.event_id']
  round_id varchar [note: 'Round identifier from TrackWrestling (e.g., "123456" for rounds, "N.1" for dual meet bouts)']
  label varchar [note: 'Round display label (e.g., "Round 1", "Finals") or dual meet matchup (e.g., "1.  Woodgrove vs Dominion")']
  raw_html text [note: 'Captured HTML content for parsing (tw-list for rounds, tw-table for dual meets)']
  parsed_ok boolean [note: 'Whether HTML was successfully parsed into matches']
  first_seen timestamp [default: `CURRENT_TIMESTAMP`, note: 'When record was first created']
  
  indexes {
    (gov_body, event_id, round_id) [pk]
  }
  
  note: '''Raw HTML captured per tournament round for later parsing.
  
  For standard tournaments: round_id is numeric, raw_html contains tw-list sections.
  For dual meets (team tournaments): round_id is "N.X" format (e.g., "N.1"), 
    label is the matchup text (e.g., "1.  Woodgrove vs Dominion"),
    raw_html contains a tw-table with match results.'''
}

Ref: tournament_rounds.(gov_body, event_id) > tournaments.(gov_body, event_id)

Table matches {
  match_id bigint [pk, increment, note: 'Surrogate key (identity)']
  gov_body varchar
  event_id varchar [note: 'FK to tournaments.event_id']
  round_id varchar [note: 'FK to tournament_rounds.round_id']
  weight_class varchar [note: 'Weight class (e.g., "106", "285")']
  raw_match_results text [note: 'Raw HTML snippet for the match']
  round_detail varchar [note: 'Round detail text (e.g., "Quarterfinal")']
  winner_name varchar [note: 'Name of the match winner']
  winner_team varchar [note: 'Team of the match winner']
  decision_type varchar [note: 'Full decision type description']
  loser_name varchar [note: 'Name of the match loser']
  loser_team varchar [note: 'Team of the match loser']
  decision_type_code varchar [note: 'Short code (FALL, DEC, MD, TF, etc.)']
  winner_points integer [note: 'Points scored by winner']
  loser_points integer [note: 'Points scored by loser']
  fall_time varchar [note: 'Time of fall if applicable']
  bye boolean [note: 'Whether this was a bye (no opponent)']
  first_seen timestamp [default: `CURRENT_TIMESTAMP`, note: 'When record was first created']
  winner_elo_after double
  winner_elo_adjustment double
  loser_elo_after double
  loser_elo_adjustment double
  elo_computed_at timestamp [note: 'NULL until calculate_elo.py processes the match']
  elo_sequence bigint
  winner_elo_before double
  loser_elo_before double
  expected_winner double
  expected_loser double
  k_applied double
  k_type_mult double
  k_expected_mult double
  k_mov_mult double
  k_quick_mult double
  margin integer
  fall_seconds integer
  round_order integer
  winner_prev_matches integer
  loser_prev_matches integer
  
  indexes {
    (gov_body, event_id, round_id)
    (gov_body, elo_sequence)
  }
  
  note: 'Individual match results parsed from round HTML, plus Elo outputs'
}

Ref: matches.(gov_body, event_id) > tournaments.(gov_body, event_id)
Ref: matches.(gov_body, event_id, round_id) > tournament_rounds.(gov_body, event_id, round_id)

Table wrestlers {
  gov_body varchar
  name varchar [note: 'Wrestler name']
  current_elo double [note: 'Current ELO rating']
  matches_played integer [note: 'Total matches played']
  last_event_id varchar [note: 'Most recent tournament event_id']
  last_start_date date [note: 'Date of most recent match']
  last_updated timestamp [default: `CURRENT_TIMESTAMP`, note: 'When record was last updated']
  last_opponent_name varchar [note: 'Name of most recent opponent']
  last_adjustment double [note: 'ELO adjustment from most recent match']
  last_team varchar [note: 'Most recent team affiliation']
  best_elo double [note: 'Highest ELO rating achieved']
  best_date date [note: 'Date when best ELO was achieved']
  wins integer [note: 'Total wins']
  wins_fall integer [note: 'Wins by fall/pin']
  losses integer [note: 'Total losses']
  losses_fall integer [note: 'Losses by fall/pin']
  dqs integer [note: 'Disqualifications']
  opponent_elo_sum double [note: 'Sum of opponent ELOs (for avg calculation)']
  opponent_elo_count integer [note: 'Count of opponents (for avg calculation)']
  opponent_avg_elo double [note: 'Average ELO of opponents faced']
  
  indexes {
    (gov_body, name) [pk]
  }
  
  note: 'Current wrestler stats and ELO ratings'
}

Ref: wrestlers.(gov_body, last_event_id) > tournaments.(gov_body, event_id)

Table wrestler_history {
  match_id bigint [note: 'FK to matches.match_id (ON DELETE CASCADE)']
  role varchar [note: 'W for winner, L for loser']
  gov_body varchar
  name varchar [note: 'Wrestler name']
  team varchar [note: 'Team at time of match']
  event_id varchar [note: 'FK to tournaments.event_id']
  round_id varchar [note: 'FK to tournament_rounds.round_id']
  weight_class varchar [note: 'Weight class']
  start_date date [note: 'Date of match']
  opponent_name varchar [note: 'Opponent wrestler name']
  opponent_team varchar [note: 'Opponent team']
  opponent_pre_elo double [note: 'Opponent ELO before match']
  opponent_post_elo double [note: 'Opponent ELO after match']
  pre_elo double [note: 'Wrestler ELO before match']
  post_elo double [note: 'Wrestler ELO after match']
  adjustment double [note: 'ELO change from this match']
  expected_score double [note: 'Expected win probability']
  k_applied double [note: 'Final K-factor applied']
  k_type_mult double [note: 'K multiplier for decision type']
  k_expected_mult double [note: 'K multiplier for expected score']
  k_mov_mult double [note: 'K multiplier for margin of victory']
  k_quick_mult double [note: 'K multiplier for quick pins']
  decision_type varchar [note: 'Full decision type description']
  decision_type_code varchar [note: 'Short decision code']
  margin integer [note: 'Point margin (winner_points - loser_points)']
  fall_seconds integer [note: 'Fall time in seconds if applicable']
  round_detail varchar [note: 'Round detail text']
  round_order integer [note: 'Order of round in tournament']
  bye boolean [note: 'Whether this was a bye']
  elo_sequence bigint [note: 'Global sequence number for ELO calculations']
  last_updated timestamp [default: `CURRENT_TIMESTAMP`, note: 'When record was last updated']
  
  indexes {
    (match_id, role) [pk]
    (gov_body, name)
    (gov_body, event_id)
  }
  
  note: 'Historical record of each wrestler match with ELO details'
}

Ref: wrestler_history.match_id > matches.match_id
Ref: wrestler_history.(gov_body, event_id) > tournaments.(gov_body, event_id)
Ref: wrestler_history.(gov_body, name) > wrestlers.(gov_body, name)
